# audiobook-dl

./: .gitignore  README.md  default.nix  flake.nix  pyproject.toml  requirements.txt  setup.py  shell.nix  supported_sites.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pytest.yml
audiobookdl/: __init__.py  __main__.py  args.py  config.py  download.py  exceptions.py  logging.py  main.py
audiobookdl/assets/: ffmpeg_chapter_template.txt  simple_help.txt  storytel_metadata_corrections.json
audiobookdl/assets/errors/: book_access.txt  book_has_no_audiobook.txt  book_not_found.txt  book_not_released.txt  chapters_add.txt  cloudflare_blocked.txt  config_not_found.txt  data_not_present.txt  download_error.txt  failed_combining.txt  generic.txt  missing_cookies.txt  missing_dependency.txt  nextory_want_to_read.txt  no_files_found.txt  no_source_found.txt  request_error.txt  user_not_authorized.txt
audiobookdl/assets/sources/ereolen/: libraries.txt  metadata_query.graphql
audiobookdl/assets/sources/podimo/: book_info.graphql  files.graphql  login.graphql  podcast.graphql  podcast_episode_file.graphql  podcast_episodes.graphql
audiobookdl/output/: __init__.py  download.py  encryption.py  ffmpeg_progress.py  metadata.py  output.py
audiobookdl/output/metadata/: __init__.py  ffmpeg.py  id3.py  mp4.py
audiobookdl/services/: __init__.py  audiobooksdotcom.py  blinkist.py  bookbeat.py  overdrive.py  scribd.py  services.py
audiobookdl/sources/: __init__.py  audiobooksdotcom.py  blinkist.py  bookbeat.py  chapter.py  chirp.py  ereolen.py  everand.py  librivox.py  nextory.py  overdrive.py  podimo.py  rss.py  saxo.py  scribd.py  sources.py  storytel-legacy.py  storytel.py  yourcloudlibrary.py
audiobookdl/sources/source/: __init__.py  networking.py
audiobookdl/utils/: __init__.py  args.py  audiobook.py  dependencies.py  downloadthread.py  exceptions.py  http.py  image.py  logging.py  messages.py  metadata.py  networking.py  output.py  service.py  source.py  types.py
tests/: test_output.py  test_urls.py
tests/sources/: test_storytel.py
